<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/ivBackground"
        android:src="@drawable/ic_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="-8dp"
        android:layout_marginTop="-16dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ivDoodle"
        android:src="@drawable/ic_doodle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="-300dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLogin"
        android:text="Login"
        android:textSize="32sp"
        android:fontFamily="@font/montserratbold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="160dp"
        android:paddingStart="32dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSignIn"
        android:text="Login untuk melanjutkan"
        android:textSize="16sp"
        android:fontFamily="@font/montserratsemibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogin"
        android:paddingTop="8dp"
        android:paddingStart="32dp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:background="@drawable/selector_input"
        android:id="@+id/tilUsernameLogin"
        app:endIconMode="clear_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSignIn"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        android:paddingTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsernameLogin"
            android:hint="Username"
            android:fontFamily="@font/montserratmedium"
            android:paddingStart="16dp"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/tilPasswordLogin"
        android:background="@drawable/selector_input"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilUsernameLogin"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        android:paddingTop="12dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordLogin"
            android:hint="Password"
            android:fontFamily="@font/montserratmedium"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/button"
        android:id="@+id/btnLogin"
        android:text="Login"
        android:fontFamily="@font/montserratsemibold"
        android:textSize="16sp"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPasswordLogin"
        android:layout_marginTop="28dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <TextView
        android:id="@+id/tvNoAccount"
        android:text="Belum punya akun?"
        android:textSize="14sp"
        android:fontFamily="@font/montserratmedium"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:layout_marginStart="70dp"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvGoRegister"
        android:text="Register"
        android:textSize="14sp"
        android:fontFamily="@font/montserratbold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/tvNoAccount"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>